kubernetes/grc-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grc-depl
spec:
  selector:
    matchLabels:
      app: grc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grc
    spec:
      containers:
      - image: grc
        name: grc
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
