kubernetes/mongodb-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grc-mongodb-depl
spec:
  selector:
    matchLabels:
      app: grc
      tier: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grc
        tier: mongodb
    spec:
      containers:
      - image: mongo
        name: mongodb
        ports:
        - containerPort: 27017
