kubernetes/grc-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: grc-svc
spec:
  ports:
    - port: 8000
  selector:
    app: grc
  type: ClusterIP
