kubernetes/grc.yml
apiVersion: v1
kind: Service
metadata:
  name: grc
  labels:
    app: grc
spec:
  ports:
    - port: 8000
  selector:
    app: grc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grc
  labels:
    app: grc
spec:
  selector:
    matchLabels:
      app: grc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grc
    spec:
      containers:
      - image: oscarsanchezdm/grc:latest
        name: grc
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: grc
