kubernetes/mongodb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: grc-mongodb-svc
spec:
  ports:
    - port: 27017
  selector:
    app: grc
    tier: mongodb
  type: ClusterIP
